--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <div class="page">
 <header class="header">
     <div class="header__top">
+        <img src="./images/logo.svg" alt="Шахматная фигура" class="logo">
+        <div class="header__join">
+            <button class="button__join">Вступить в клуб</button>
+            <img src="./images/arrow.svg" alt="Стрелка" class="header__arrow">
+        </div>
         <button class="button__main">Зарегистрироваться</button>
     </div>
     <div class="header__main">
@@ -24,7 +29,7 @@
 </header>
 <main class="main">
 <section class="team">
-   <h2 class="title">Наша команда</h2>
+   <h1 class="title">Наша команда</h1>
     <p class="subtitle">Лучшие шахматисты и шахматистки любители России, гройсмейстеры, с ними играть — одно удовольствие!</p>
    <div class="team__gallery">
        <figure class="team__figure-image">
@@ -51,9 +56,14 @@
    </div>
 </section>
     <section class="team__wanted">
-        <img src="./images/team-wanted-image.svg" alt="Картинка с кругами" class="team__mainimage">
-       <p class="title">Хочешь <br>в команду?</p>
-        <p class="subtitle">Свяжись с нами и мы обсудим все детали присоеденения к команде.</p>
+       <div class="team__wanted__image">
+           <img src="./images/team-wanted-image.svg" alt="Картинка с кругами" class="team__mainimage">
+       </div>
+<div class="team__wanted__text">
+    <p class="title"><span class="team__wanted__title">Хочешь</span>в команду?</p>
+    <p class="subtitle"><span class="team__wanted__title">Свяжись с нами и мы обсудим все детали </span>присоеденения к команде.</p>
+</div>
+
     </section>
     <section class="war">
         <p class="title">Сражения</p>
