--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
     <section class="war">
         <p class="title">Сражения</p>
-        <p class="subtitle">Сражайтесь в парах и приятно проводите время. Если хотите прокачать свои навыки — сыграйте
+        <p class="subtitle"><span class="team__wanted__title">Сражайтесь в парах и приятно проводите время.</span><span class="team__wanted__title">Если хотите прокачать свои навыки — сыграйте</span>
             с нашими шахматистами.</p>
         <div class="team__gallery">
             <figure class="team__figure-image"><img alt="Игра в шахматы" src="./images/card1.svg"> </figure>
